--- a/intromain.css
+++ b/intromain.css
@@ -1,4 +1,9 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
+    background-color: beige;
     margin: 0px;
     padding: 0px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -9,9 +14,11 @@ h1 {
 }
 
 .head {
+    display: flex;
     background-color: lavender;
     width: 100%;
     border: solid pink 3px;
+    height: 100px;
 }
 
 .header-title-right {
@@ -20,7 +27,7 @@ h1 {
 
 .header-menu-left {
     position: absolute;
-    top: 1px;
+    top: 0px;
     right: 16px;
 }
 
@@ -28,6 +35,40 @@ h1 {
     position: fixed;
 }
 
+.side-menu-right {
+    padding-top: 103px;
+    position: fixed;
+}
+
 .post-body {
-    padding-top: 100px;
+    display: flex;
+    padding-top: 103px;
+    padding-left: 200px;
+    border: solid 1px red;
+}
+
+.post {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex: wrap;
+    width: 60%;
+}
+
+.post-show {}
+
+
+/* .post-body:hover {
+    flex-direction: row-reverse;
+} */
+
+.about {
+    width: 40%;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: flex-end;
 }
