--- a/Project 3 Calculator/calculator.css
+++ b/Project 3 Calculator/calculator.css
@@ -79,6 +79,6 @@ button {
     width: 260px !important;
 }
 
-.calculator .keys .key-threetimes button {
+.calculator .keys .key-three-times button {
     width: 390px !important;
 }
